--- a/main.css
+++ b/main.css
@@ -92,7 +92,7 @@
 	--stats-court-max-width: 680px;
 	--stats-stroke-icon-width: 60px;
 	--stats-table-margin: 10px;
-	--stats-pin-icon-width: 50px;
+	--stats-pin-icon-width: 50px; /*50px;*/
 	--stats-table-font: 18px;
 	--stats-table-header-font: 28px;
 
@@ -125,23 +125,49 @@
 	--login-button-border: 1px solid #3D94F6;
 	--login-button-border-radius: 4px;
 	--login-button-color-hover: #007bff;
+    
+    /* min-width: 0px*/
+    --container-flex-dir: column;
+    --container-align-items: stretch;
+    
+    --right-column-flex-dir: row;
+    --right-column-align-items: flex-start;
+    --right-column-margin: 5px 5px 0px; 
+    --logging-toolbar-margin-top: var(--undo-button-margin-top);
+    
 }
 
+@media (min-width: 700px) {
+    :root {
+    --container-flex-dir: row;
+    --container-align-items: center;
+    --right-column-flex-dir: column;
+    --right-column-align-items: center;
+    --right-column-margin: 0px 0px 0px var(--right-column-margin-left);
+    --logging-toolbar-margin-top: 50px;
+    }
+}
+
+
+
+
+
+
 body {
-  font-family: var(--font-family-normal);
+    font-family: var(--font-family-normal);
+    color: var(--color-top-bar);
 	background-color: var(--color-background);
 	margin: 0;
-	color: var(--color-top-bar);
 }
 
 #container {
-	width: var(--container-width);
-	min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));
+	max-width: var(--container-width);
+	/* min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));*/
 	margin: auto;
 	padding-top: calc(var(--top-bar-height) + var(--container-margin));
 	display: flex;
-	flex-direction: row;
-	align-items: center;
+	flex-direction: var(--container-flex-dir);
+	align-items: var(--container-align-items);
 	justify-content: center;
 }
 
@@ -149,13 +175,14 @@ body {
 /* Top Bar Style */
 #topbar, #player-view-topbar {
 	position: fixed;
-	width: 100%;
+    width: 100%;
 	height: var(--top-bar-height);
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	background-color: var(--color-top-bar);
 }
+
 #topbar {
 	z-index: 200;
 }
@@ -165,6 +192,7 @@ body {
 
 #topbar-logo {
 	width: calc(var(--container-width) - var(--top-bar-options-width));
+    padding: 0px var(--top-bar-options-pad);
 	display: flex;
 	align-items: center;
 	color: var(--top-bar-font-color);
@@ -206,7 +234,7 @@ body {
 
 
 #topbar-options {
-	width: var(--top-bar-options-width);
+	/*width: var(--top-bar-options-width);*/
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
@@ -341,6 +369,7 @@ body {
 	width: var(--player-names-label-width);
 	text-align: center;
 	font-size: var(--player-names-label-font);
+    overflow-wrap: break-word;
 }
 /* (...Players Names Header Style) */
 
@@ -416,15 +445,25 @@ body {
 
 /* Right Column Style */
 #right-column {
-	min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));
-	margin-left: var(--right-column-margin-left);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
+	/*min-height: calc(100vh - var(--top-bar-height) - var(--container-margin));*/
+    display: flex;
+    margin: var(--right-column-margin);
+    flex-direction: var(--right-column-flex-dir);
+    align-items: var(--right-column-align-items);
+    justify-content: space-between;
+}
+
+#top-right-column {
+    margin: var(--undo-button-margin-top) 5px 0px;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #end-match {
+    margin-bottom: var(--undo-button-margin-top);
 	background-color: var(--undo-button-background);
 	font-size: var(--undo-button-font);
 	color: var(--undo-button-font-color);
@@ -440,6 +479,7 @@ body {
 
 /* Scores Style */
 .score_menu_container {
+    margin-top: var(--undo-button-margin-top);
 	min-width: var(--score-board-width);
 	min-height: var(--score-board-height);
 	display: flex;
@@ -532,7 +572,8 @@ body {
 
 
 /* Logging Toolbar Style */
-#logging-toolbar {
+#logging-toolbar {    
+  margin: var(--logging-toolbar-margin-top) 5px 0px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -610,6 +651,7 @@ body {
 .stats_menu_table_container {
 	display:flex;
 	flex-direction: row;
+    align-items: center;
 	margin-top: var(--stats-feedback-margin);
 }
 
@@ -691,17 +733,19 @@ body {
 
 .court_stats_icon {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 
 .shot-pin {
 	position: absolute;
-	width: var(--stats-pin-icon-width);
+	width: 20%;
 	opacity: 0.6;
+    transform: translate(-50%, 0);
 }
 
 .feedback_menu_container, .feedback_viewer_container {
+    max-width: 80vw;
 	width: calc(var(--stats-feedback-text-width) + 2 * var(--stats-feedback-text-pad) + 4);
 	height: var(--stats-feedback-height);
 	margin-top: var(--stats-feedback-margin);
@@ -721,6 +765,7 @@ body {
 
 #feedback_text {
 	resize: none;
+    max-width: calc(80vw - 2*var(--stats-feedback-text-pad));
 	padding: var(--stats-feedback-text-pad);
 	border: var(--stats-feedback-text-border);
 	border-radius: var(--button-radius-normal);
