--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
 	--top-bar-popup-width: 220px;
 	--top-bar-popup-pad: 20px;
 	--top-bar-dropdown-pad: 40px;
-	--top-bar-font-large: 24px;
+	--top-bar-font-large: 26px;
 	--top-bar-font-normal: 20px;
 	--top-bar-font-small: 18px;
 	--top-bar-font-color: #FFF;
@@ -24,6 +24,7 @@
 	--container-margin: 10px;
 	--button-radius-normal: 6px;
 	--font-family-normal: 'Open Sans', Arial, sans-serif;
+	--font-family-logo: 'Audiowide', Arial, sans-serif;
 
 	--player-names-button-size: 60px;
 	--player-names-button-pad: 10px;
@@ -109,7 +110,7 @@
 	--login-container-pad: 48px 40px 36px 40px;
 	--login-container-background: #FFF;
 	--login-container-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-	--login-logo-font-size: 20px;
+	--login-logo-font-size: 26px;
 	--login-logo-margin-bottom: 42px;
 	--login-title-font-size: 24px;
 	--login-title-margin-bottom: 60px;
@@ -125,16 +126,16 @@
 	--login-button-border: 1px solid #3D94F6;
 	--login-button-border-radius: 4px;
 	--login-button-color-hover: #007bff;
-    
+
     /* min-width: 0px*/
     --container-flex-dir: column;
     --container-align-items: stretch;
-    
+
     --right-column-flex-dir: row;
     --right-column-align-items: flex-start;
-    --right-column-margin: 5px 5px 0px; 
+    --right-column-margin: 5px 5px 0px;
     --logging-toolbar-margin-top: var(--undo-button-margin-top);
-    
+
 }
 
 @media (min-width: 700px) {
@@ -158,6 +159,10 @@ body {
     color: var(--color-top-bar);
 	background-color: var(--color-background);
 	margin: 0;
+}
+
+.tennis-buddy-logo {
+	font-family: var(--font-family-logo);
 }
 
 #container {
@@ -455,7 +460,7 @@ body {
 
 #top-right-column {
     margin: var(--undo-button-margin-top) 5px 0px;
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -572,7 +577,7 @@ body {
 
 
 /* Logging Toolbar Style */
-#logging-toolbar {    
+#logging-toolbar {
   margin: var(--logging-toolbar-margin-top) 5px 0px;
   display: flex;
   flex-direction: column;
@@ -688,7 +693,7 @@ body {
 /* Toggle Stats Style */
 .toggle_stats_container {
     margin: 20px 10px 10px;
-    
+
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -972,7 +977,7 @@ table.history-table tr.history-table-empty:hover > td {
 }
 .point_end_btn_container {
     margin: 40px 10px 20px;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: center;
