--- a/main.css
+++ b/main.css
@@ -142,6 +142,10 @@
     display: none;
 }
 
+.point_icon {
+    display: none;
+}
+
 @media (min-width: 650px) {
     :root {
     --container-flex-dir: row;
@@ -153,6 +157,12 @@
     }
     
     .stats_icon {
+        display: block;
+    }
+}
+
+@media (min-width: 900px) {
+    .point_icon {
         display: block;
     }
 }
@@ -736,10 +746,6 @@ body {
 	margin-right: var(--stats-table-margin);
 }
 
-.point_icon{
-	width: 100%;
-}
-
 .court_stats_icon {
     width: 100%;
     height: auto;
@@ -973,24 +979,28 @@ table.history-table tr.history-table-empty:hover > td {
 /* Modal Content Buttons */
 #point_end_options_container {
 	display: flex;
+    flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: space-around;
-	align-items: center;
+	align-items: flex-end;
 
     padding: 20px;
+    max-width: 80vw;
 }
 .point_end_btn_container {
+    flex: 1;
     margin: 40px 10px 20px;
     
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 .shot_ending_type {
     margin: 10px 0px 5px;
 	border-radius: 20px;
 
-    min-width: 150px;
+    width: 150px;
 
     background-color: var(--score-board-button-color);
 	color: var(--score-board-button-font-color);
@@ -1003,6 +1013,10 @@ table.history-table tr.history-table-empty:hover > td {
 }
 .shot_ending_type:hover {
     background-color: var(--score-board-button-color-hover);
+}
+
+.point_icon{
+	width: 150px;
 }
 
 /* Modal Close Button */
